# embargo

./: .gitignore  Cargo.toml  README.md  cross-language-call-resolution.md  parsing.md
benches/: performance.rs
src/: lib.rs  main.rs
src/core/: analyzer.rs  graph.rs  mod.rs  resolver.rs  scanner.rs
src/formatters/: json_compact.rs  llm_language.rs  llm_optimized.rs  mod.rs
src/parsers/: cache.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
test_apps/cpp_app/: CMakeLists.txt  Makefile  README.md  config.json.in
test_apps/cpp_app/include/: models.hpp  utils.hpp
test_apps/cpp_app/src/: main.cpp
test_apps/python_app/: main.py  models.py  utils.py
test_apps/typescript_app/src/: main.ts
test_apps/typescript_app/src/models/: Base.ts  User.ts
test_apps/typescript_app/src/services/: Application.ts  DatabaseService.ts  UserService.ts
test_apps/typescript_app/src/utils/: Config.ts  Logger.ts  crypto.ts
tests/: formatter_json_compact.rs  formatter_llm_optimized.rs  graph_builder.rs  integration_analyzer.rs  integration_analyzer_python.rs  integration_analyzer_typescript.rs  parse_cache.rs  parser_python.rs  parser_rust.rs  parser_typescript.rs  resolver.rs  scanner.rs  snapshot_json_compact.rs  snapshot_llm_blocks.rs  snapshot_llm_clusters_large.rs
tests/golden/: llm_clusters_large.md
