[package]
name = "embargo"
version = "0.1.0"
edition = "2021"
authors = ["embargo developers"]
description = "Ultrafast codebase dependency extractor and formatter"
license = "MIT"

[[bin]]
name = "embargo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-java = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c-sharp = "0.20"
petgraph = "0.6"
rayon = "1.8"
bincode = "1.3"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false